# givenergy-modbus

./: .bandit.yaml  .bumpversion.cfg  .deepsource.toml  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODERNISATION_PLAN.md  README.md  SECURITY-AUDIT-2026-06-10.md  SECURITY.md  index.html  makefile  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  setup.cfg  sitemap.xml
.claude/: settings.json  settings.local.json
.claude/agents/: register-safety-reviewer.md
.claude/skills/changelog-entry/: SKILL.md
.claude/skills/run-checks/: SKILL.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: capture-probe.yml  config.yml  new-device.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  dev.yml  fuzz.yml  preview.yml  publish-tag.yml  release.yml
api/: index.html
architecture/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  architecture.md  flow-state-spec.md  hardware-firmware-quirks.md  installation.md  migrating-from-the-async-fork.md  plant-device-graph.md  post-v2-improvement-plan.md  post-v2.2-plan.md  register-identification.md  usage.md  v2.1-roadmap.md
docs/reference/: writable-registers.md
docs/reference/registers/: app_4.0.7_inventory.json  app_4.0.7_reconciliation.json  installer-app-reference.md  v4.1.6_inventory.json
docs/release-notes/: v2.0.md  v2.1.md  v2.2.0.md  v2.3.0.md
flow-state-spec/: index.html
givenergy_modbus/: __init__.py  cli.py  client.py  codec.py  decoder.py  exceptions.py  framer.py  lut.py  modbus.py  pdu.py  transaction.py  util.py
givenergy_modbus/client/: __init__.py  asynchronous.py  client.py  commands.py  coordinator.py  dispatch.py  model.py  network.py  tasks.py
givenergy_modbus/model/: __init__.py  aio_battery.py  battery.py  battery_splice.py  device.py  devices.py  ems.py  gateway.py  hv_bcu.py  inverter.py  inverter_threephase.py  lv_bcu.py  manifest.py  meter.py  plant.py  register.py  register_banks.py  register_cache.py  register_getter.py  slot_map.py
givenergy_modbus/pdu/: __init__.py  base.py  heartbeat.py  lan_config.py  null.py  read_registers.py  transparent.py  write_registers.py
givenergy_modbus/testing/: __init__.py  identify.py  mock_plant.py
hardware-firmware-quirks/: index.html
installation/: index.html
migrating-from-the-async-fork/: index.html
plant-device-graph/: index.html
post-v2-improvement-plan/: index.html
post-v2.2-plan/: index.html
reference/registers/: app_4.0.7_reconciliation.json  installer_1.154.3_inventory.json  v4.1.6_inventory.json
reference/registers/installer-app-reference/: index.html
reference/writable-registers/: index.html
register-identification/: index.html
release-notes/v2.0/: index.html
release-notes/v2.1/: index.html
release-notes/v2.2.0/: index.html
release-notes/v2.3.0/: index.html
scripts/: audit_register_doc.py  reconcile_v416.py  regen_fixture_crcs.py  release.py  scan_capture_serials.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_codec.py  test_decoder.py  test_deprecation_aliases.py  test_framer.py  test_framer_properties.py  test_givenergy_modbus.py  test_modbus.py  test_pdu.py  test_util.py
tests/client/: __init__.py  test_capture.py  test_client.py  test_client_write_safety.py  test_commands.py  test_detect.py  test_detect_characterisation.py  test_inverter_commands.py  test_load_refresh.py  test_mock_plant_integration.py  test_offline_from_caches.py  test_refresh_resilience.py
tests/debug/: README.md  byte_slip_scan.py  capture_0x11.py  eps_in_load_demand.py  physics_delta_classify.py  probe_discharge_limit_clamp.py  probe_read_address.py  probe_write_address.py  replay.py  soak_skip_if_fresh.py  unsolicited_responses.py
tests/fixtures/captures/: README.md  _redact_extra.py
tests/fixtures/captures/aio_a/: README.md
tests/fixtures/captures/ems_2_inv_3_bat_a/: README.md
tests/fixtures/captures/gateway_2aio_a/: README.md
tests/fixtures/captures/hybrid_2_bat_a/: README.md
tests/fixtures/captures/hybrid_gen2_1_bat_a/: README.md
tests/fixtures/captures/three_phase_hv_a/: README.md  giv3hy11_hass174_180s.txt
tests/model/: __init__.py  test_addressing_from_captures.py  test_aio_battery.py  test_battery.py  test_battery_splice.py  test_device.py  test_devices.py  test_ems.py  test_enums.py  test_fixture_golden_master.py  test_gateway.py  test_hv_bcu.py  test_inverter.py  test_inverter_threephase.py  test_lv_bcu.py  test_manifest.py  test_meter.py  test_plant.py  test_plant_accessors.py  test_plant_devices.py  test_plant_phase3.py  test_register.py  test_register_cache.py  test_register_conventions.py  test_register_getter.py  test_splice_heal_corpus.py  test_three_phase_from_capture.py  test_topology_walk.py
tests/scripts/: test_audit_app_reconciliation.py  test_release.py
tests/testing/: test_from_spec.py  test_identify.py
usage/: index.html
v2.1-roadmap/: index.html
