[tool.poetry]
name = "givenergy-modbus"
version = "1.0.0"
homepage = "https://github.com/dewet22/givenergy-modbus"
description = "A python library to access GivEnergy inverters via Modbus TCP, with no dependency on the GivEnergy Cloud."
authors = ["Dewet Diener <givenergy-modbus@dewet.org>"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Framework :: tox',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Home Automation',
    'Topic :: Scientific/Engineering',
    'Topic :: System :: Networking :: Monitoring',
]
packages = [
    { include = "givenergy_modbus" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
crccheck = "^1.1"
pydantic = "^2.0"
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
pyyaml = ">=6.0.2"
ipython = "^9.0.0"
pip = "^26.0.0"
pre-commit = "^4.0.0"
twine = "^6.0.0"
virtualenv = "^21.0.0"

[tool.poetry.group.test.dependencies]
bandit = "^1.7.5"
mypy = "^1.1.1"
pre-commit = "^4.0.0"
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.4.0"
ruff = "^0.15.0"
tox = "^4.4.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-autorefs = "^1.0.0"
mkdocs-include-markdown-plugin = "^7.0.0"
mkdocs-material = "^9.5.0"
mkdocs-material-extensions = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "C90"]
ignore = ["E203", "E266", "D100", "D105", "D107"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D103", "D104", "F403", "F405"]

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_error_codes = true
show_error_context = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]

[tool.pytest.ini_options]
timeout = 1
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py313, py314, format, lint, build

[gh-actions]
python =
    3.14: py314, format, lint, build
    3.13: py313

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync --with=test
passenv = *
setenv =
    PYTHONPATH = {toxinidir}
    PYTHONWARNINGS = ignore
commands =
    poetry run pytest --cov=givenergy_modbus --cov-branch --cov-report=xml --cov-report=term-missing tests

[testenv:format]
commands =
    poetry run ruff format --check givenergy_modbus tests

[testenv:lint]
commands =
    poetry run ruff check givenergy_modbus tests
    poetry run mypy givenergy_modbus tests

[testenv:build]
allowlist_externals =
    poetry
    mkdocs
    twine
commands =
    poetry install --no-root --sync --with=docs
    poetry build
    mkdocs build
    twine check dist/*
"""

[tool.codespell]
ignore-words-list = "astroid"
skip = "./.*,./poetry.lock"
