[project]
name = "givenergy-modbus"
version = "2.0.2"
description = "A python library to access GivEnergy inverters via Modbus TCP, with no dependency on the GivEnergy Cloud."
authors = [
    {name = "Dewet Diener", email = "givenergy-modbus@dewet.org"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.14"
dependencies = [
    "crccheck>=1.1,<2",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/dewet22/givenergy-modbus"

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
    "ipython>=9.0.0,<10",
    "pip>=26.0.0,<27",
    "twine>=6.0.0,<7",
    "virtualenv>=21.0.0,<22",
]
test = [
    "bandit>=1.7.5,<2",
    "mypy>=2.0.0,<3",
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-timeout>=2.4.0,<3",
    "ruff>=0.15.0,<1",
    "tox>=4.4.8,<5",
    "tox-uv>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-autorefs>=1.0.0,<2",
    "mkdocs-include-markdown-plugin>=7.0.0,<8",
    "mkdocs-material>=9.5.0,<10",
    "mkdocs-material-extensions>=1.3.0,<2",
    "mkdocstrings[python]>=1.0.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["givenergy_modbus"]

[tool.hatch.build.targets.sdist]
include = ["/givenergy_modbus", "/tests"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "C90"]
ignore = ["E203", "E266", "D100", "D105", "D107"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D103", "D104", "F403", "F405"]

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_error_codes = true
show_error_context = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]

[tool.pytest.ini_options]
timeout = 1
asyncio_mode = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py314, format, lint, build

[gh-actions]
python =
    3.14: py314, format, lint, build

[testenv]
runner = uv-venv-lock-runner
dependency_groups =
    test
passenv = *
setenv =
    PYTHONPATH = {toxinidir}
    PYTHONWARNINGS = ignore
commands =
    pytest --cov=givenergy_modbus --cov-branch --cov-report=xml --cov-report=term-missing tests

[testenv:format]
runner = uv-venv-lock-runner
dependency_groups =
    test
commands =
    ruff format --check givenergy_modbus tests

[testenv:lint]
runner = uv-venv-lock-runner
dependency_groups =
    test
commands =
    ruff check givenergy_modbus tests
    mypy givenergy_modbus tests
    bandit -r givenergy_modbus scripts tests -c .bandit.yaml

[testenv:build]
runner = uv-venv-lock-runner
dependency_groups =
    dev
    docs
allowlist_externals =
    uv
    twine
commands =
    uv build
    mkdocs build
    twine check dist/*
"""

[tool.codespell]
ignore-words-list = "astroid"
skip = "./.*,./uv.lock"
