[project]
name = "givenergy-modbus"
version = "2.12.0"
description = "A python library to access GivEnergy inverters via Modbus TCP, with no dependency on the GivEnergy Cloud."
authors = [
    {name = "Dewet Diener", email = "givenergy-modbus@dewet.org"},
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "crccheck>=1.1,<2",
    "pydantic>=2.0,<3",
    "typing-extensions>=4.9",
]

[project.urls]
Homepage = "https://github.com/dewet22/givenergy-modbus"

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
    "ipython>=9.0.0,<10",
    "pip>=26.0.0,<27",
    "twine>=6.0.0,<7",
    "virtualenv>=21.0.0,<22",
]
test = [
    "bandit>=1.7.5,<2",
    "mypy>=2.0.0,<3",
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-timeout>=2.4.0,<3",
    "ruff>=0.15.0,<1",
    "tox>=4.4.8,<5",
    "tox-uv>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-autorefs>=1.0.0,<2",
    "mkdocs-include-markdown-plugin>=7.0.0,<8",
    "mkdocs-material>=9.5.0,<10",
    "mkdocs-material-extensions>=1.3.0,<2",
    "mkdocstrings[python]>=1.0.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["givenergy_modbus"]

[tool.hatch.build.targets.sdist]
include = ["/givenergy_modbus", "/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "C90"]
ignore = ["E203", "E266", "D100", "D105", "D107"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D103", "D104", "F403", "F405"]

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_error_codes = true
show_error_context = true
plugins = ["pydantic.mypy"]
# Type-check the bodies of unannotated functions too — catches mistakes in
# protocol and test-helper code that previously slipped through. Production
# code (givenergy_modbus/*) passes cleanly under this; existing test files
# carry 58 historical findings that are out of scope for the §7 first wave
# and are deferred via the per-module override below. See post-v2 §7.
check_untyped_defs = true

# Deferred: tests/* needs a cleanup pass to satisfy check_untyped_defs.
# The findings are mostly sloppy sentinel typing (e.g. `dict[int, Future]`
# assigned a string) and uninspected attribute access on union types.
# Re-enable once those are addressed; until then, the production-code
# tightening is the win we're banking from §7.
[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]

[tool.pytest.ini_options]
timeout = 1
asyncio_mode = "auto"
# Escalate two warning classes that previously slipped through CI silently:
#   - PytestUnraisableExceptionWarning: pytest's catch-all for unraisable
#     exceptions during teardown, including the "task was destroyed but it is
#     pending" cases that surface async lifecycle bugs.
#   - RuntimeWarning for unawaited coroutines: the most common shape of an
#     async test leak. Scoped to the canonical message so we don't promote
#     unrelated RuntimeWarnings (deprecation-style notices from dependencies)
#     to errors.
# See post-v2 §4.
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
    "error:coroutine .* was never awaited:RuntimeWarning",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py311, py312, py313, py314, format, lint, build

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314, format, lint, build

[testenv]
runner = uv-venv-lock-runner
dependency_groups =
    test
passenv = *
setenv =
    PYTHONPATH = {toxinidir}
    PYTHONWARNINGS = ignore
commands =
    pytest --cov=givenergy_modbus --cov-branch --cov-report=xml --cov-report=term-missing tests

[testenv:format]
runner = uv-venv-lock-runner
dependency_groups =
    test
commands =
    ruff format --check givenergy_modbus tests

[testenv:lint]
runner = uv-venv-lock-runner
dependency_groups =
    test
commands =
    ruff check givenergy_modbus tests
    mypy givenergy_modbus tests
    bandit -r givenergy_modbus scripts tests -c .bandit.yaml

[testenv:build]
runner = uv-venv-lock-runner
dependency_groups =
    dev
    docs
allowlist_externals =
    uv
    twine
# Build into the testenv's per-run tempdir rather than the project's
# persistent dist/ so twine check only sees the artifacts produced by
# *this* run. Otherwise dist/ accumulates old wheels and the check noises
# through every historical version. CI builds run on a fresh runner with
# an empty dist/, so this only changes the local-developer experience.
# See post-v2 §8.
commands =
    uv build --out-dir {envtmpdir}/dist
    mkdocs build
    twine check {envtmpdir}/dist/*
"""

[tool.codespell]
ignore-words-list = "astroid"
# The register inventory carries verbatim doc register names, typos and all
# ("Freqency", "ModelL") — they're facts about the doc, not our prose.
skip = "./.*,./uv.lock,*/reference/registers/*.json,./docs/reference/registers/*.json"
